<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditCorrectText">


    <item
        android:id="@+id/action_ignore_once"
        android:title="@string/action_ignore_once_title"
        android:icon="@drawable/ignore_once_icon"
        android:orderInCategory="100"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add_to_library"
        android:title="@string/action_add_to_library_title"
        android:icon="@drawable/add_to_library_icon"
        android:orderInCategory="200"
        android:visible="false"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_show_suggestions"
        android:title="@string/action_show_suggestions_title"
        android:icon="@drawable/show_suggestions_on_icon"
        android:orderInCategory="300"
        android:visible="true"
        app:showAsAction="always" />



    <item
        android:id="@+id/action_overflow_menu"
        android:title="@string/action_overflow_menu_title"
        android:icon="@drawable/menu_icon"
        android:orderInCategory="1000"
        app:showAsAction="always">


        <menu>
            <item
                android:id="@+id/action_choose_language"
                android:title="@string/action_choose_language_title"
                android:icon="@drawable/flag_eng_icon"
                android:orderInCategory="450"
                app:showAsAction="never">

                <menu>
                    <item
                        android:id="@+id/action_language_ARM"
                        android:title="@string/action_language_ARM_title"
                        android:icon="@drawable/flag_arm_icon"
                        android:orderInCategory="100"
                        app:showAsAction="never" />

                    <item
                        android:id="@+id/action_language_ENG"
                        android:title="@string/action_language_ENG_title"
                        android:icon="@drawable/flag_eng_icon"
                        android:orderInCategory="200"
                        app:showAsAction="never" />

                    <item
                        android:id="@+id/action_language_RUS"
                        android:title="@string/action_language_RUS_title"
                        android:icon="@drawable/flag_rus_icon"
                        android:orderInCategory="300"
                        app:showAsAction="never" />
                </menu>
            </item>

            <item
                android:id="@+id/action_record"
                android:title="@string/action_record_title"
                android:icon="@drawable/record_icon"
                android:orderInCategory="500"
                app:showAsAction="never" />


            <item
                android:id="@+id/action_copy"
                android:title="@string/action_copy_title"
                android:icon="@drawable/copy_icon"
                android:orderInCategory="550"
                app:showAsAction="never" />


            <item
                android:id="@+id/action_send"
                android:title="@string/action_send_title"
                android:icon="@drawable/send_icon"
                android:orderInCategory="700"
                app:showAsAction="never" />


            <!-- TODO find all accuracies of typed phrase
            <item
                android:id="@+id/action_find"
                android:title="@string/action_find_title"
                android:icon="@drawable/find_icon"
                android:orderInCategory="800"
                app:showAsAction="never" />
            -->

            <!-- TODO Settings
            <item
                android:id="@+id/action_settings"
                android:title="@string/action_settings_title"
                android:icon="@drawable/settings_icon"
                android:orderInCategory="900"
                app:showAsAction="never" />
            -->

            <item
                android:id="@+id/action_help"
                android:title="@string/action_help_title"
                android:icon="@drawable/help_icon"
                android:orderInCategory="1000"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_feedback"
                android:title="@string/action_feedback_title"
                android:icon="@drawable/feedback_icon"
                android:orderInCategory="1100"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_about"
                android:title="@string/action_about_title"
                android:icon="@drawable/about_icon"
                android:orderInCategory="1200"
                app:showAsAction="never" />

        </menu>
    </item>

</menu>